--- a/react-portfolio-main/package.json
+++ b/react-portfolio-main/package.json
@@ -1,4 +1,20 @@
 {
+  "name": "portfolio",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  }
+}
+
+
+{
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
