--- a/react-portfolio-main/package.json
+++ b/react-portfolio-main/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "portfolio",
+  "name": "react-portfolio",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-
-{
-  "name": "react-portfolio",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -34,5 +23,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.5.9"
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
